<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.kartabaza.projectforschool.MenuActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_game"
            android:textSize="30dp"
            android:layout_gravity="center|bottom"/>
        <Button
            android:id="@+id/play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to_game"
            android:textSize="20dp"
            android:layout_gravity="center"/>
        <Button
            android:id="@+id/rules"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to_rules"
            android:textSize="20dp"
            android:layout_gravity="center"/>
        <Button
            android:id="@+id/records"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to_records"
            android:textSize="20dp"
            android:layout_gravity="center"/>
        <Button
            android:id="@+id/exit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to_exit"
            android:textSize="20dp"
            android:layout_gravity="center"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
